# CLS

./: .gitignore  Cargo.toml  LICENSE  README.md  TESTING.md  start-dev.ps1  start-dev.sh
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
api-server/: Cargo.toml
api-server/src/: main.rs  websocket.rs
docs/: design.md
docs/temp/: PROJECT_STRUCTURE.md  dev-setup.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Container.tsx  Earth.tsx  GreatCircleRoute.tsx  InstancedContainers.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/utils/: coordinates.ts
openspec/changes/build-cherrychain-platform/: design.md  proposal.md  tasks.md
openspec/changes/build-cherrychain-platform/specs/data-analytics/: spec.md
openspec/changes/build-cherrychain-platform/specs/management-interface/: spec.md
openspec/changes/build-cherrychain-platform/specs/simulation-engine/: spec.md
openspec/changes/build-cherrychain-platform/specs/visualization-system/: spec.md
shared-types/: Cargo.toml
shared-types/src/: lib.rs
simulation-engine/: Cargo.toml
simulation-engine/src/: lib.rs
