[workspace]
members = [
    "simulation-engine",
    "api-server",
    "shared-types",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CherryChain Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework and WebSocket support
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Shared types
shared-types = { path = "shared-types" }
